--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/fresco.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="icon" type="image/png" href="./imgs/favicon-32x32.png" sizes="32x32" />
 </head>
@@ -363,8 +364,8 @@
   </script>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="./node_modules/@staaky/fresco/dist/js/fresco.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="./node_modules/@staaky/fresco/dist/css/fresco.css" />
+  <script type="text/javascript" src="./js/fresco.min.js"></script>
+  
 
 
 </body>
