adaptados parrafos a la actualidad

--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                 </div>
               </div>
               <h4 class="fw-semibold mb-0 text-light">JavaScript</h4>
-              <p class="text-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+              <p class="text-secondary">Finalización: Enero 2023. Ushuaia</p>
               <h4 class="fw-semibold mb-0 text-light">ReactJs</h4>
-              <p class="text-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+              <p class="text-secondary">Finalización: Marzo 2023 Ushuaia</p>
               <h4 class="fw-semibold mb-0 text-light mt-2 mb-2">Programación Backend</h4>
-              <p class="text-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+              <p class="text-secondary">Actualmente Cursando</p>
             </div>
 
             <div class="col d-flex flex-column gap-2">
@@ -182,9 +182,9 @@
                 </div>
               </div>
               <h4 class="fw-semibold mb-0 text-light">Wordpress - Blogs</h4>
-              <p class="text-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+              <p class="text-secondary">Finalización: Marzo 2023 Ushuaia</p>
               <h4 class="fw-semibold mb-0 text-light">Wordpress - WooCommerce</h4>
-              <p class="text-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+              <p class="text-secondary">Actualmente Cursando</p>
             </div>
           </div>
         </div>
