added meta google console

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" type="text/css" href="css/fresco.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="icon" type="image/png" href="./imgs/favicon-32x32.png" sizes="32x32" />
+  <meta name="google-site-verification" content="ZhTqCOR3K-m5o-D9qKkH5Zu_RRUXraL_EcF1jw-sk0w" />
 </head>
 
 <body class="bg-dark">
